# halo2-app

./: package-lock.json  package.json
circuits/: Cargo.toml
circuits/.cargo/: config
circuits/src/: hammster.rs  wasm.rs
src/components/: HammingDistance.tsx  ProveForm.tsx  VerifyForm.tsx
src/pages/: TestProvider.tsx  _app.tsx  index.tsx
