[package]
name = "halo2_hammster"
version = "0.1.0"
edition = "2021"

[lib]
name = "hammster"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
extend = "1.2.0"
plotters = { version = "0.3.4", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"] } 
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
halo2_proofs = { version = "0.3.0", features = ["dev-graph", "multicore"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
halo2_proofs = { version = "0.3.0", default-features = false, features = ["dev-graph"] }
web-sys = { version = "0.3.61", features = ['Window', 'Worker'] }

[features]
default = ["native"]
native = ["plotters"]
wasm = []

[profile.release]
opt-level = 3
lto = true